TAG: mappingload-3-1-0-5
TAG: mappingload-3-1-0-4
TAG: mappingload-3-1-0-3
TAG: mappingload-3-1-0-2
DATE: 02/07/2005
STAFF: lec
RELEASE: A
CHANGES: add a way to add a new chromosome experiment incrementally

TAG: mappingload-3-1-0-1
DATE: 02/01/2005
STAFF: lec
RELEASE: A
CHANGES: fixed bug in mappingload.py

TAG: mappingload-2-0-2
DATE: 06/21/2004
STAFF: lec
RELEASE: A
CHANGES: remove duplicate check

TAG: mappingload-2-0-1
DATE: 05/13/2004
STAFF: lec
RELEASE: A
CHANGES: JSAM;mapping.csh

TAG: mappingload-2-0-0
DATE: 04/01/2004
STAFF: lec
RELEASE: A
CHANGES: JSAM

TAG: mappingload-1-0-6
DATE: 03/22/2004
STAFF: lec
RELEASE: A
CHANGES: added "Description"

TAG: mappingload-1-0-5
DATE: 06/12/2003
STAFF: lec
RELEASE: A
CHANGES: TR 4010

TAG: mappingload-1-0-4
DATE: 02/10/2003
STAFF: lec
RELEASE: A
CHANGES: TR 3928/Fantom2 load

TAG: mappingload-1-0-3
DATE: 02/03/2003
STAFF: lec
RELEASE: A
CHANGES: TR 3928/Fantom2 load

TAG: mappingload-1-0-2
DATE: 10/21/2002
STAFF: lec
RELEASE: A
CHANGES: added db.useOneConnection()

TAG: mappingload-1-0-1
DATE: 09/06/2002
STAFF: lec
RELEASE: A
CHANGES: new

TAG: mappingload-1-0-0
DATE: 08/30/2002
STAFF: lec
RELEASE: A
CHANGES: new
